--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,7 @@ edition = "2018"
 
 [dependencies]
 reqwest = "0.10.9"
+futures-util = "0.3"
 tokio = { version = "0.2", features = ["macros"] }
+hyper = "0.13"
+hyperlocal = "0.7"
