--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ futures-util = "0.3"
 tokio = { version = "0.2", features = ["macros"] }
 hyper = "0.13"
 hyperlocal = "0.7"
+serde = { version = "^1.0.118", features = ["derive"] }
+serde_json = "^1.0.41"
